--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-GOOGLE_API_KEY=AIzaSyD9VKaKZsaGXcLfTzn2zhyLTYadZqyHH3M
-GOOGLE_CSE_ID=e5a80c88eca774056
-GMAIL_USER=teneshwardwivedi22102003@gmail.com
-GMAIL_APP_PASSWORD=rebh havq agug plub
+GOOGLE_API_KEY=your_google_api_key
+GOOGLE_CSE_ID=your_custom_search_engine_id
+GMAIL_USER=youremail@gmail.com
+GMAIL_APP_PASSWORD=your_16_char_app_password
 DRY_RUN=true
